# event-tools

./: README.md  event-cli  pyproject.toml  shell.nix
nix/: deps.nix
src/event_tools/: termine-und-protokolle-test.py
