[tool.poetry]
name = "event-tools"
version = "20.07.0"
description = ""
readme = "README.md"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
keywords = ["events","cryptpad"]
license = "AGPL-3.0-or-later"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
eliot = "^1.12.0"
click = "^7.1.2"
requests = "^2.24.0"
pycryptpad-tools = {git = "https://github.com/dpausp/pycryptpad-tools"}
python-redmine = "^2.3.0"
panflute = "^1.12.5"
jinja2 = "^2.11.2"
pendulum = "^2.1.0"
redmineapi-tools = {git = "https://github.com/dpausp/redmineapi-tools"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
cryptpad-cli = 'event_tools.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
